(fix) responsive landingHeader ok

--- a/content/posts/2024-02-11_demo.mdx
+++ b/content/posts/2024-02-11_demo.mdx
@@ -12,7 +12,7 @@ coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=29
 status: draft
 ---
 
-lorem ipsum
+lorem ipsum test andy
 
 ## Start here
 
