(feat)[Home] try to fix display content page terms and privacy

--- a/content/cvgs/terms.mdx
+++ b/content/cvgs/terms.mdx
@@ -1,19 +1,6 @@
----
-title: Privacy
-description: Some post description demo
-keywords:
-  - nextjs
-  - boilerplate
-  - meilleur
-  - best
-tags:
-  - tags1
-coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-status: draft
----
-## Mentions légales & Politique de confidentialité
+### Mentions légales & Politique de confidentialité
 
-## Société et publication :
+### Société et publication :
 
 La société Unlcoaching, soucieuse des droits des individus, notamment au
 regard des traitements automatisés et dans une volonté de transparence avec
@@ -28,7 +15,7 @@ personnelles, nous vous invitons à consulter le site : https://www.cnil.fr
 La poursuite de la navigation sur ce site vaut acceptation sans réserve des
 dispositions et conditions d'utilisation qui suivent.
 
-## Article 1 - Mentions légales
+### Article 1 - Mentions légales
 
 Editeur de Unlcoaching.fr
 
@@ -44,19 +31,19 @@ Hebergeur
 
 Unlcoaching.fr est hébergé par Unlcoaching SAS, dont le siège social est situé au 12 rue Dora Maar à Tours, 37100.
 
-## Article 2 - Accès au site
+### Article 2 - Accès au site
 
 Toutes les marques, photographies, textes, commentaires, illustrations, images animées ou non, séquences vidéo, sons, ainsi que toutes les applications informatiques qui pourraient être utilisées pour faire fonctionner ce site et plus généralement tous les éléments reproduits ou utilisés sur le site sont protégés par les lois en vigueur au titre de la propriété intellectuelle.
 
 Ils sont la propriété pleine et entière de l'éditeur ou de ses partenaires. Toute reproduction, représentation, utilisation ou adaptation, sous quelque forme que ce soit, de tout ou partie de ces éléments, y compris les applications informatiques, sans l'accord préalable et écrit de l'éditeur, sont strictement interdites. Le fait pour l'éditeur de ne pas engager de procédure dès la prise de connaissance de ces utilisations non autorisées ne vaut pas acceptation desdites utilisations et renonciation aux poursuites.
 
-## Article 3 - Contenu du site
+### Article 3 - Contenu du site
 
 Toutes les marques, photographies, textes, commentaires, illustrations, images animées ou non, séquences vidéo, sons, ainsi que toutes les applications informatiques qui pourraient être utilisées pour faire fonctionner ce site et plus généralement tous les éléments reproduits ou utilisés sur le site sont protégés par les lois en vigueur au titre de la propriété intellectuelle.
 
 Ils sont la propriété pleine et entière de l'éditeur ou de ses partenaires. Toute reproduction, représentation, utilisation ou adaptation, sous quelque forme que ce soit, de tout ou partie de ces éléments, y compris les applications informatiques, sans l'accord préalable et écrit de l'éditeur, sont strictement interdites. Le fait pour l'éditeur de ne pas engager de procédure dès la prise de connaissance de ces utilisations non autorisées ne vaut pas acceptation desdites utilisations et renonciation aux poursuites.
 
-## Article 4 - Gestion du site
+### Article 4 - Gestion du site
 
 Pour la bonne gestion du site, l'éditeur pourra à tout moment :
 
@@ -64,7 +51,7 @@ Pour la bonne gestion du site, l'éditeur pourra à tout moment :
     suspendre, interrompre ou limiter l'accès à tout ou partie du site, réserver l'accès au site, ou à certaines parties du site, à une catégorie déterminée d'internautes.
     suspendre le site afin de procéder à des mises à jour.
 
-## Article 5 - Responsabilités
+### Article 5 - Responsabilités
 
 La responsabilité de l'éditeur ne peut être engagée en cas de défaillance, panne, difficulté ou interruption de fonctionnement, empêchant l'accès au site ou à une de ses fonctionnalités.
 
@@ -79,13 +66,13 @@ L'éditeur n'est pas responsable des dommages causés à vous-même, à des tier
 
 Si l'éditeur venait à faire l'objet d'une procédure amiable ou judiciaire en raison de votre utilisation du site, il pourra se retourner contre vous pour obtenir l'indemnisation de tous les préjudices, sommes, condamnations et frais qui pourraient découler de cette procédure.
 
-## Article 6 - Liens hypertextes
+### Article 6 - Liens hypertextes
 
 La mise en place par les utilisateurs de tous liens hypertextes vers tout ou partie du site est autorisée par l'éditeur. Tout lien devra être retiré sur simple demande de l'éditeur.
 
 Toute information accessible via un lien vers d'autres sites n'est pas publiée par l'éditeur. L'éditeur ne dispose d'aucun droit sur le contenu présent dans ledit lien.
 
-## Article 7 - Collecte et protection des données
+### Article 7 - Collecte et protection des données
 
 Vos données sont collectées par Unlcoaching.
 
@@ -97,7 +84,7 @@ Les données personnelles collectées sont les suivantes :
 
     données de navigation
 
-## Article 8 - Droit d'accès, de rectification et de déférencement de vos données
+### Article 8 - Droit d'accès, de rectification et de déférencement de vos données
 
 En application de la réglementation applicable aux données à caractère personnel, les utilisateurs disposent des droits suivants :
 
@@ -122,7 +109,7 @@ Pour plus d’information sur le sujet, vous pouvez consulter le site Internet d
 
 Les utilisateurs peuvent aussi introduire une réclamation auprès de la CNIL sur le site de la CNIL : Nous vous recommandons de nous contacter dans un premier temps avant de déposer une réclamation auprès de la CNIL, car nous sommes à votre entière disposition pour régler votre problème.
 
-## Article 9 - Utilisations des données
+### Article 9 - Utilisations des données
 
 Les données personnelles collectées auprès des utilisateurs ont pour objectif la mise à disposition des services de la Plateforme, leur amélioration et le maintien d'un environnement sécurisé.
 
@@ -137,13 +124,13 @@ La base légale des traitements est l’exécution du contrat entre l’utilisat
     gestion des éventuels litiges avec les utilisateurs.
     envoi d'informations commerciales et publicitaires, en fonction des préférences de l'utilisateur.
 
-## Article 10 - Politique de conservation des données
+### Article 10 - Politique de conservation des données
 
 La Plateforme conserve vos données pour la durée nécessaire pour vous fournir ses services ou son assistance.
 
 Dans la mesure raisonnablement nécessaire ou requise pour satisfaire aux obligations légales ou réglementaires, régler des litiges, empêcher les fraudes et abus ou appliquer nos modalités et conditions, nous pouvons également conserver certaines de vos informations si nécessaire, même après que vous ayez fermé votre compte ou que nous n'ayons plus besoin pour vous fournir nos services.
 
-## Article 11 - Partage des données personnelles avec des tiers
+### Article 11 - Partage des données personnelles avec des tiers
 
 Les données personnelles peuvent être partagées avec des sociétés tierces exclusivement dans l’Union européenne, dans les cas suivants :
 
@@ -152,7 +139,7 @@ Les données personnelles peuvent être partagées avec des sociétés tierces e
     quand la Plateforme recourt aux services de prestataires pour fournir l'assistance utilisateurs, la publicité et les services de paiement. Ces prestataires disposent d'un accès limité aux données de l'utilisateur, dans le cadre de l'exécution de ces prestations, et ont l'obligation contractuelle de les utiliser en conformité avec les dispositions de la réglementation applicable en matière protection des données à caractère personnel.
     si la loi l'exige, la Plateforme peut effectuer la transmission de données pour donner suite aux réclamations présentées contre la Plateforme et se conformer aux procédures administratives et judiciaire.
 
-## Article 12 - Offres commerciales
+### Article 12 - Offres commerciales
 
 Vous êtes susceptible de recevoir des offres commerciales de l'éditeur. Si vous ne le souhaitez pas, veuillez cliquer sur le lien suivant : https://www.Unlcoaching.fr/contact.
 
@@ -162,7 +149,7 @@ Si, lors de la consultation du site, vous accédez à des données à caractère
 
 Les données sont conservées et utilisées pour une durée conforme à la législation en vigueur.
 
-## Article 13 - Cookies
+### Article 13 - Cookies
 
 Qu’est-ce qu’un « cookie » ?
 
@@ -189,15 +176,15 @@ Les cookies suivants sont présents sur ce site : Cookie Google :
 
 La durée de vie de ces cookies est de treize mois.
 
-## Article 14 - Photographie et représentation des produits
+### Article 14 - Photographie et représentation des produits
 
 Les photographies de produits, accompagnant leur description, ne sont pas contractuelles et n'engagent pas l'éditeur.
 
-## Article 15 - Loi applicable
+### Article 15 - Loi applicable
 
 Les présentes conditions d'utilisation du site sont régies par la loi française et soumises à la compétence des tribunaux du siège social de l'éditeur, sous réserve d'une attribution de compétence spécifique découlant d'un texte de loi ou réglementaire particulier.
 
-## Article 16 - Contactez-nous
+### Article 16 - Contactez-nous
 
 Pour toute question, information sur les produits présentés sur le site, ou concernant le site lui-même, vous pouvez laisser un message à l'adresse suivante : contact@Unlcoaching.fr
 Charte graphique & Design web :
@@ -206,14 +193,3 @@ Les visuels et le design du site ont été intégralement réalisés par Unlcoac
 Crédits Photos :
 
 © https://unsplash.com/
-
-<style jsx>{`
-  h2 {
-    color: white !important;
-  }
-  ,
-  p {
-    color: white !important;
-    text-align: justify;
-  }
-`}</style>
