(fix)[Blog] Test publish article

--- a/content/posts/2024-02-10_demo.mdx
+++ b/content/posts/2024-02-10_demo.mdx
@@ -9,39 +9,78 @@ keywords:
 tags:
   - tags1
 coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-status: draft
+status: published 
 ---
 
-lorem ipsum test andy
+<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
 
-## Start here
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !
+</p>
 
-```ts {2}
-export async function generateMetadata({
-  params,
-}: PostParams): Promise<Metadata> {
-  const post = await getCurrentPost(params.slug);
+<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
 
-  if (!post) {
-    notFound();
-  }
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !
+</p>
 
-  return {
-    title: post.attributes.title,
-    description: post.attributes.description,
-    keywords: post.attributes.keywords,
-    authors: {
-      name: "Melvynx",
-      url: "https://melvynx.com",
-    },
-  };
-}
-```
+<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
 
-## Title 2
-
-I love reading.
-
-### Title 3
-
-Me too.
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  ! !
+</p>
