--- a/content/posts/2024-02-10_demo.mdx
+++ b/content/posts/2024-02-10_demo.mdx
@@ -1,6 +1,6 @@
 ---
-title: Some post demo
-description: Some post description demo
+title: Pour d'améliorer ses performances
+description: Dormir suffisamment et de manière régulière est aussi important que l'entraînement lui-même pour les athlètes de haut niveau.
 keywords:
   - nextjs
   - boilerplate
@@ -11,80 +11,73 @@ tags:
   - Complement alimentaire
   - Entrainement
 
-
 coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 status: draft
 ---
 
-<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-<p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  !
-</p>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+!
 
-<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-<p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  !
-</p>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+!
 
-<h2>Le Sommeil, Pilier de la Récupération Athlétique</h2>
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-<p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-  ! !
-</p>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+! !
