--- a/content/posts/2024-02-14_demo.mdx
+++ b/content/posts/2024-02-14_demo.mdx
@@ -14,37 +14,73 @@ tags:
 coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 status: draft
 ---
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-lorem ipsum
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !
 
-## Start here
 
-```ts {2}
-export async function generateMetadata({
-  params,
-}: PostParams): Promise<Metadata> {
-  const post = await getCurrentPost(params.slug);
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-  if (!post) {
-    notFound();
-  }
 
-  return {
-    title: post.attributes.title,
-    description: post.attributes.description,
-    keywords: post.attributes.keywords,
-    authors: {
-      name: "Melvynx",
-      url: "https://melvynx.com",
-    },
-  };
-}
-```
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !
 
-## Title 2
 
-I love reading.
+## Le Sommeil, Pilier de la Récupération Athlétique
 
-### Title 3
 
-Me too.
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  !Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
+  consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
+  ! !
