(feat)[Blog] responsive title and add article

--- a/content/terms.mdx
+++ b/content/terms.mdx
@@ -12,8 +12,7 @@ leurs droits.
 Pour toute information complémentaire sur la protection des données
 personnelles, nous vous invitons à consulter le site : https://www.cnil.fr
 
-La poursuite de la navigation sur ce site vaut acceptation sans réserve des
-dispositions et conditions d'utilisation qui suivent.
+La poursuite de la navigation sur ce site vaut acceptation sans réserve des dispositions et conditions d'utilisation qui suivent.
 
 ### Article 1 - Mentions légales
 
