(feat)[Blog][Legal] add cradCategories and fix resposive , add mdx content terms and cvg

--- a/content/posts/2024-02-10_demo.mdx
+++ b/content/posts/2024-02-10_demo.mdx
@@ -10,74 +10,30 @@ tags:
   - Fitness
   - Complement alimentaire
   - Entrainement
-
 coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 status: published
 ---
 
 ## Le Sommeil, Pilier de la Récupération Athlétique
 
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-!
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit.
 
-## Le Sommeil, Pilier de la Récupération Athlétique
+### Importance du Sommeil
 
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-!
+Le sommeil joue un rôle crucial dans la récupération après l'effort physique. Dormir suffisamment permet de :
 
-## Le Sommeil, Pilier de la Récupération Athlétique
+- Récupérer les muscles sollicités
+- Améliorer la concentration et les performances
+- Réduire le stress et l'anxiété
 
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsum
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-consectetur repellat, corporis eaque corrupti in dolores reprehenderit, enim
-consequatur dolore, nam praesentium sint veniam ad recusandae ab amet impedit
-! !
+### Comment Améliorer la Qualité du Sommeil
+
+Pour optimiser la qualité de votre sommeil, il est recommandé de :
+
+1. **Établir une routine de sommeil** : Couchez-vous et levez-vous à des heures régulières.
+2. **Créer un environnement propice** : Assurez-vous que votre chambre est sombre, calme et à une température confortable.
+3. **Éviter les stimulants** : Réduisez la consommation de caféine et d'alcool, surtout en soirée.
+
+## Conclusion
+
+Investir dans un sommeil de qualité est essentiel pour quiconque souhaite améliorer ses performances, que ce soit dans le sport ou dans la vie quotidienne. En intégrant ces habitudes simples, vous pouvez significativement améliorer votre récupération et votre bien-être général.
