(feat)[BlogContent] add cardCategorie x2 to display with responsive

--- a/content/terms.mdx
+++ b/content/terms.mdx
@@ -1,7 +1,5 @@
 ---
 
-### Mentions légales
-
 Editeur de Unlcoaching.fr  
 Unlcoaching SAS au capital de 3 000 €, dont le siège social est situé au 12 rue Dora Maar, 37100 Tours, représentée par Kévin Descoubes, en qualité de Président, immatriculée au RCS de Tours B 807 774 021 (SIREN 807774021).  
 N° de téléphone : 09 84 37 56 28  
@@ -112,7 +110,7 @@ Pour toute question, veuillez nous contacter à l'adresse suivante : contact@unl
 ---
 
 Charte graphique & Design web :  
-Le site a été réalisé par Unlcoaching.
+Le site a été réalisé par Andy Ramaroson.
 
 Crédits photos :  
 © https://unsplash.com/
