fix formatting in Hero component and improve text readability in blog post

--- a/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
+++ b/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
@@ -16,7 +16,10 @@ status: published
 
 ### Introduction
 
-Dans le monde du sport et du fitness, votre état d'esprit (ou mindset) est tout aussi important que votre condition physique. Un bon mindset peut faire la différence entre atteindre vos objectifs et abandonner face aux défis. Je vous partage comment cultiver et maintenir un état d'esprit positif et résilient dans votre parcours sportif.
+Dans le monde du sport et du fitness, votre état d'esprit (ou mindset) est tout aussi important que votre condition physique. Un bon mindset peut faire
+la différence entre atteindre vos objectifs et abandonner face aux défis. Je vous partage comment cultiver et maintenir un état d'esprit positif et résilient
+dans votre parcours sportif.
+
 ### 1. Adoptez un état d'esprit de croissance
 
 Dans le sport, il est crucial de croire en votre capacité à progresser :
