fix: correct CVG section header and update link path in FloatingLegalFooter

--- a/content/cvg.mdx
+++ b/content/cvg.mdx
@@ -385,7 +385,7 @@ Le Client s’engage à :
 
     Les Parties déclarent expressément qu’elles sont et demeureront, pendant toute la durée des présentes, des personnes indépendantes, assumant chacune les risques de leur propre exploitation et leurs obligations juridiques.
 
-## DUREE
+## DUREE ##
 
 Le Contrat prendra effet à compter de sa date de signature.
 
