Update mindset article: add styling for headings and paragraphs to enhance readability

--- a/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
+++ b/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
@@ -109,3 +109,10 @@ Maintenir un bon mindset dans le sport est un entraînement en soi. Comme pour v
 ### Appel à l'action
 
 Quelle stratégie allez-vous mettre en place dès votre prochain entraînement pour améliorer votre mindset sportif ? Partagez vos idées et expériences dans les commentaires ci-dessous. Et pour plus de conseils sur l'optimisation de vos performances, consultez nos autres articles sur [lien vers d'autres ressources du site].
+
+<style jsx>{`
+  h2,
+  p {
+    color: white !important;
+  }
+`}</style>
